--- a/wwwroot/css/library.css
+++ b/wwwroot/css/library.css
@@ -1,1 +1,100 @@
-﻿
+﻿* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial;
+    font-size: 14px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0px;
+}
+
+
+
+.output {
+    display: flex;
+    position: relative;
+    width: 100%;
+}
+
+.panel {
+    display: block;
+    position: relative;
+    min-height: 100vh;
+    padding: 0px;
+}
+
+.title {
+    font-size: 18px;
+    margin: 10px 20px;
+}
+
+.titles {
+    background-color: #CCCCCC;
+    border-right: 1px solid #aaaaaa;
+    min-width: 250px;
+}
+
+    .titles li {
+        background-color: transparent;
+        border-top: 0.2px solid #bebebe;
+        border-bottom: 0.2px solid #bebebe;
+        padding: 6px 15px;
+        cursor: pointer;
+        transition: background-color 250ms ease-in-out;
+    }
+
+        .titles li.selected {
+            font-weight:bold;
+        }
+        .titles li.selected,
+        .titles li:hover {
+            background-color: #e2e2e2;
+        }
+
+.results {
+    background-color: #fafafa;
+    padding: 10px 0px;
+    width: 100%;
+    height: 100vh;
+    overflow-y: scroll;
+}
+
+.commonWords {
+    min-height: 70px;
+}
+
+    .commonWords ul,
+    .searchResults ul {
+        padding: 0px 35px;
+    }
+
+        .commonWords ul li {
+            position: relative;
+            display: inline;
+            padding: 1px 0px;
+        }
+
+            .commonWords ul li .count {
+                position: relative;
+                display: inline-block;
+                top: -2px;
+                background-color: #4a277d;
+                margin: 0px 10px 0px 2px;
+                font-size: 9px;
+                border: 1px solid black;
+                border-radius: 25px;
+                padding: 3px;
+                color: white;
+                font-weight: bold;
+            }
+
+.searchArea {
+    border-top: 1px solid #e2e2e2;
+    padding: 20px 0px 10px;
+}
